--- a/theme/components/_app-input.scss
+++ b/theme/components/_app-input.scss
@@ -46,8 +46,40 @@
     }
     &-menu {
       position: absolute;
-      top: 100%;
+      width: 100%;
+      max-width: 180px;
+      top: calc(100% + 10px);
       z-index: 9999;
+    }
+    &-option {
+      color: $accent;
+      font-size: 20px;
+      font-weight: 700;
+      margin-bottom: 1px;
+      padding: 16px 24px;
+      cursor: pointer;
+      background-color: #f6f6f6;
+      transition: background-color .25s ease, color .25s ease;
+      &:first-child {
+        border-top-left-radius: 16px;
+        border-top-right-radius: 16px;
+      }
+      &:last-child {
+        margin-bottom: 0;
+        border-bottom-left-radius: 16px;
+        border-bottom-right-radius: 16px;
+      }
+      &:not(.vs__dropdown-option--selected) {
+        &:hover {
+          background-color: $blue;
+          color: $white;
+          transition: background-color .25s ease, color .25s ease;
+        }
+      }
+      &--selected {
+        background-color: $blue;
+        color: $white;
+      }
     }
   }
   &__selected {
