--- a/theme/components/_app-modal.scss
+++ b/theme/components/_app-modal.scss
@@ -11,9 +11,17 @@
   z-index: 1002;
   overflow: hidden;
   min-height: 100vh;
-  clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .25s ease;
+  &.active {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity .25s ease;
+  }
+  //clip-path: polygon(0% 0%, 0% 0%, 0% 100%, 0% 100%);
   //transform: translate3d(-100%, 0, 0);
-  @include scrollbars(8px, rgba($dark, .8), rgba($dark, .2));
+  @include scrollbars(8px, rgba($dark, 0.8), rgba($dark, 0.2));
   &-inner {
     position: relative;
     display: flex;
@@ -35,28 +43,45 @@
       background-color: #fff;
     }
   }
+  &.youtube {
+    background-color: rgba($dark, .56);
+    padding: 0;
+    .app-modal-inner {
+      width: 90vw;
+      height: 80vh;
+      //padding: 80px 230px 36px;
+      border-radius: 24px;
+      background-color: transparent;
+      .embed-youtube {
+        width: 100%;
+      }
+      .video {
+        height: 100%;
+      }
+    }
+  }
 }
 
-.skew{
-  -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-  -moz-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-  -ms-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-  -o-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-}
+//.skew{
+//  -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+//  -moz-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+//  -ms-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+//  -o-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+//  clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+//}
 
-.vertical {
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-  -moz-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-  -ms-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-  -o-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-}
+//.vertical {
+//  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+//  -moz-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+//  -ms-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+//  -o-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+//  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+//}
 
-.skewback {
-  -webkit-clip-path: polygon(0 0, -100% 0, 100% 100%, 0 100%);
-  -moz-clip-path: polygon(0 0, -100% 0, 100% 100%, 0 100%);
-  -ms-clip-path: polygon(0 0, -100% 0, 100% 100%, 0 100%);
-  -o-clip-path: polygon(0 0, -100% 0, 100% 100%, 0 100%);
-  clip-path: polygon(0 0, -100% 0, 100% 100%, 0 100%);
-}
+//.skewback {
+//  -webkit-clip-path: polygon(0 0, -100% 0, 100% 100%, 0 100%);
+//  -moz-clip-path: polygon(0 0, -100% 0, 100% 100%, 0 100%);
+//  -ms-clip-path: polygon(0 0, -100% 0, 100% 100%, 0 100%);
+//  -o-clip-path: polygon(0 0, -100% 0, 100% 100%, 0 100%);
+//  clip-path: polygon(0 0, -100% 0, 100% 100%, 0 100%);
+//}
